--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,2 @@
-# CONNECTION BASE DE DONNEES
+# IDENTIFIANT BASE DE DONNEES (MongoDB)
 MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/myDatabase?retryWrites=true&w=majority
